--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,10 @@
 node_modules
+.next/
+out/
+dist/
+.cache/
+.env
+.DS_Store
+yarn-error.log
+yarn.lock   // Add this line
+```                                             
