--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "sass": "sass --watch public/assets/scss/main.scss:public/assets/css/main.css"
   },
   "dependencies": {
+    "@netlify/plugin-nextjs": "^5.10.1",
     "isotope-layout": "^3.0.6",
     "next": "13.4.19",
     "react": "18.2.0",
