--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@netlify/plugin-nextjs": "^5.10.1",
     "isotope-layout": "^3.0.6",
     "next": "13.5.1",
+    "nodemailer": "^7.0.3",
     "react": "18.2.0",
     "react-curved-text": "^2.0.2",
     "react-dom": "18.2.0",
